--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -606,6 +606,28 @@
       margin: 0;
     }
 
+    .section-heading-link {
+      appearance: none;
+      background: transparent;
+      border: 0;
+      padding: 0;
+      margin: 0;
+      color: inherit;
+      font: inherit;
+      letter-spacing: inherit;
+      text-transform: inherit;
+      cursor: pointer;
+    }
+
+    .section-heading-link:hover {
+      color: rgba(200, 220, 250, 0.72);
+    }
+
+    .section-heading-link:focus-visible {
+      outline: 1px solid rgba(150, 190, 255, 0.7);
+      outline-offset: 4px;
+    }
+
     /* Articles error message */
     #articles-error {
       color: #f87171;
